[gd_scene load_steps=11 format=3 uid="uid://bf72f4j7c2i3f"]

[ext_resource type="Script" uid="uid://crq6733ivcjfn" path="res://scripts/UI/pause_menu.gd" id="1_bl585"]
[ext_resource type="Shader" uid="uid://h4b8ehavycak" path="res://Art/blur.gdshader" id="1_qo2fb"]
[ext_resource type="Theme" uid="uid://c3jd5hfl65max" path="res://assets/Theme/Button_Default.tres" id="3_mko1u"]
[ext_resource type="Texture2D" uid="uid://cfrhpnfw0xam7" path="res://assets/sprites/Complete_UI_Essential_Pack_Free/01_Flat_Theme/Spritesheets/Spritesheet_UI_Flat.png" id="3_w67w4"]
[ext_resource type="Theme" uid="uid://dapn0300q5ffg" path="res://assets/Theme/Menu_Title.tres" id="4_feath"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bl585"]
shader = ExtResource("1_qo2fb")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sipkl"]
texture = ExtResource("3_w67w4")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(32, 32, 96, 64)
modulate_color = Color(0.43134, 0.43134, 0.43134, 1)

[sub_resource type="Animation" id="Animation_feath"]
resource_name = "RESET_restart"
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_mko1u"]
resource_name = "blur_restart"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.2, 0, 0.2, 0, 0.8, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.2, 0, 0.2, 0, 1, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.2, 0, 0.2, 0, 1, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.2, 0, 0.2, 0, 1, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.2, 0, 0.2, 0, 1, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0, 0.4)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w67w4"]
_data = {
&"RESET_restart": SubResource("Animation_feath"),
&"blur_restart": SubResource("Animation_mko1u")
}

[node name="PauseMenu" type="CanvasLayer"]

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bl585")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
material = SubResource("ShaderMaterial_bl585")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -175.5
offset_right = 238.0
offset_bottom = 175.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_sipkl")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/PanelContainer"]
layout_mode = 2

[node name="Buffer" type="Label" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Pause Menu Text" type="Label" parent="PauseMenu/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_feath")
text = "Pause Menu"
horizontal_alignment = 1

[node name="Buffer3" type="Label" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("3_mko1u")
text = "Resume"

[node name="Restart" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("3_mko1u")
text = "Restart"

[node name="Level_Select" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("3_mko1u")
text = "Level Select"

[node name="Quit_Menu" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("3_mko1u")
text = "Quit to Main Menu"

[node name="Quit_Desktop" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("3_mko1u")
text = "Quit to Desktop"

[node name="Buffer2" type="Label" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="PauseMenu"]
libraries = {
&"": SubResource("AnimationLibrary_w67w4")
}

[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/Resume" to="PauseMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/Restart" to="PauseMenu" method="_on_restart_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/Level_Select" to="PauseMenu" method="_on_level_select_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/Quit_Menu" to="PauseMenu" method="_on_quit_menu_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/Quit_Desktop" to="PauseMenu" method="_on_quit_desktop_pressed"]
